--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,73 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+/.wrapper {
+  width: 70%;
+  margin: auto;
+  font-family: "Helvetica-Neue", sans-serif;
+  font-size: 14px;
+  margin-top: 30px;
+}
+
+
+h1 {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 50px;
+}
+
+.list-inline {
+  text-align: center;
+}
+
+.list-inline li {
+  background: #516C89;
+  font-size: 20px;
+  color: white;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 13px;
+  margin: 10px;
+  border-radius: 5px;
+}
+
+.message {
+  text-align: center;
+  font-size: 20px;
+  color: #8795A4;
+  border-bottom: 0.1px solid lightgrey;
+  padding-bottom: 10px;
+}
+
+.response {
+  text-align: center;
+  padding-top: 30px;
+  color: rgba(135, 149, 164, 0.7);
+  line-height: 80%;
+}
+
+.response p {
+  font-weight: lighter;
+}
+
+.output {
+  display: flex;
+  justify-content: space-around;
+}
+
+.link {
+  text-decoration: none;
+  margin-top: 25px;
+}
+
+.width {
+  width: 80%;
+  margin: auto;
+}
+
+footer {
+  color: #9EA8B2;
+  font-size: 12px;
+  margin-top: 25px;
+  text-align: center;
+}
